--- a/AdminInventoryEditWindow.xaml
+++ b/AdminInventoryEditWindow.xaml
@@ -13,7 +13,7 @@
         <TextBox x:Name="textBox" HorizontalAlignment="Left" Height="23" Margin="123,121,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="120"/>
         <TextBox x:Name="textBox1" HorizontalAlignment="Left" Height="23" Margin="123,152,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="120"/>
         <Label x:Name="label3" Content="[base de datos]" HorizontalAlignment="Left" Margin="91,61,0,0" VerticalAlignment="Top"/>
-        <Button x:Name="button" Content="Volver" HorizontalAlignment="Left" VerticalAlignment="Top" Width="42" Click="button_Click"/>
+        <Button x:Name="button" Content="Volver" HorizontalAlignment="Left" VerticalAlignment="Top" Width="42" Click="ReturnButton"/>
         <Button x:Name="button1" Content="Aceptar" HorizontalAlignment="Left" Margin="86,208,0,0" VerticalAlignment="Top" Width="128" Height="22" RenderTransformOrigin="0.303,0.338"/>
     </Grid>
 </Window>
