--- a/WithdrawReturnWindow.xaml
+++ b/WithdrawReturnWindow.xaml
@@ -27,7 +27,7 @@
 
         <Grid Grid.Row="1">
             <Label Content="Nombre:"  HorizontalAlignment="Left" VerticalAlignment="Center" FontSize="16" Margin="80, 0, 0, 0" Name="NameLabel" />
-            <ComboBox HorizontalAlignment="Center" VerticalAlignment="Center" FontSize="20" Width="150" Height="25" Margin="20, 5, 0, 5" Name="TeachersComboBox"/>
+            <ComboBox Name="UITeacherComboBox" HorizontalAlignment="Center" VerticalAlignment="Center" Width="150" Height="25" Margin="20, 5, 0, 5" SelectionChanged="OnTeacherSelectionChange"/>
         </Grid>
 
         <Grid Grid.Row="2">
