--- a/WithdrawReturnWindow.xaml
+++ b/WithdrawReturnWindow.xaml
@@ -36,7 +36,7 @@
         </Grid>
 
         <Grid Grid.Row="3" Margin="0, 10, 0, 0">
-            <Label Content="A very big table" HorizontalContentAlignment="Center" VerticalContentAlignment="Center" Background="Beige" />
+            <DataGrid Name="UIMainDataGrid" HorizontalContentAlignment="Center" VerticalContentAlignment="Center" />
         </Grid>
 
         <Grid Grid.Row="4">
